# latentspy

./: pyproject.toml
src/LatentSpy/: cli.py  hooks.py  monitor.py  storage.py
src/LatentSpy/metrics/: activation_norm.py
