[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LatentSpy"
version = "0.1.0"
description = "AAI-590 LatentSpy Package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
]

[project.scripts]
latentspy = "LatentSpy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/LatentSpy"]
