[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LatentSpy"
version = "0.1.0"
description = "AAI-590 LatentSpy Package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "sse-starlette>=3.3.2",
    "torch>=2.10.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
latentspy = "LatentSpy.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/LatentSpy"]
